--- a/style.css
+++ b/style.css
@@ -144,9 +144,9 @@ body img
 
 .site-logo img
 {
-    width: 145px;
-    height: 250px;
-    margin-bottom: 100px;    
+    /*width: 145px;
+    height: 250px;*/ 
+    margin-bottom: 50px;   
 }
 
 .site-description
